--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "nyc": "^11.4.1",
+    "rollup-plugin-commonjs": "^8.2.6",
     "sinon": "^4.1.3",
     "uglify-es": "^3.3.2"
   },
@@ -74,7 +75,7 @@
     "docs": "esdoc -c .esdoc.json",
     "flow": "flow",
     "flow-typed": "flow-typed install",
-    "forever": "cross-env NODE_ENV=production forever start ./build/index.js -m pretty",
+    "forever": "cross-env NODE_ENV=production forever start ./build/popcorn-api.js",
     "lint": "eslint {src,test}/** ./*.js",
     "release": "standard-version",
     "precommit": "npm run lint && npm run flow",
@@ -82,7 +83,7 @@
     "prepush": "npm run test",
     "pretest": "npm run build",
     "providers": "babel-node ./src/index.js --providers",
-    "start": "cross-env NODE_ENV=production node ./build/index.js -m pretty",
+    "start": "cross-env NODE_ENV=production node ./build/popcorn-api.js",
     "test": "cross-env NODE_ENV=test npm run test-dredd && npm run test-mocha",
     "test-dredd": "babel-node ./node_modules/.bin/dredd",
     "test-mocha": "nyc -r=lcov -r=text mocha --recursive --exit --timeout 10000"
