--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "p-map": "^1.2.0",
     "p-times": "^1.0.1",
     "parse-torrent": "^5.8.3",
-    "pop-api": "^0.5.0",
+    "pop-api": "file:../pop-api/pop-api-0.5.0.tgz",
     "pop-api-scraper": "git+https://github.com/ChrisAlderson/pop-api-scraper.git",
     "rollup": "^0.53.0",
     "rollup-plugin-babel": "^3.0.3",
@@ -84,9 +84,9 @@
     "pretest": "npm run build",
     "providers": "babel-node ./src/index.js --providers",
     "start": "cross-env NODE_ENV=production node ./build/popcorn-api.js",
-    "test": "cross-env NODE_ENV=test npm run test-dredd && npm run test-mocha",
-    "test-dredd": "babel-node ./node_modules/.bin/dredd",
-    "test-mocha": "nyc -r=lcov -r=text mocha --recursive --exit --timeout 10000"
+    "test": "npm run test-dredd && npm run test-mocha",
+    "test-dredd": "cross-env NODE_ENV=test babel-node ./node_modules/.bin/dredd",
+    "test-mocha": "cross-env NODE_ENV=test nyc -r=lcov -r=text mocha --exit --recursive --timeout 10000"
   },
   "bin": {
     "popcorn-api": "./build/popcorn-api.js"
