--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
-    "chai-http": "^3.0.0",
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.3",
     "del": "^3.0.0",
@@ -64,6 +63,7 @@
     "nyc": "^11.4.1",
     "rollup-plugin-commonjs": "^8.2.6",
     "sinon": "^4.1.3",
+    "supertest": "^3.0.0",
     "uglify-es": "^3.3.2"
   },
   "license": "MIT",
