--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,18 @@ environment:
     - nodejs_version: 7
     - nodejs_version: 8
     - nodejs_version: 9
+  FANART_KEY:
+    secure: DT959p8vlA04lDWi4m6SXrTOmAqAuYKkV+4HYiGPc+9/SB4nL1WwG30KVzXfUp1u
+  OMDB_KEY:
+    secure: 6fya6Tfsm6BpjbYJDv3OEA==
+  NYAA_KEY:
+    secure: f+WvlgB0zG9o+MqHJ8HKumn4Fzkirz9tzdFFJS/OawpsuPOFmWSOxT+9mH6ZJVDZiQibG9glMWGaMUr/MlFw9nyIxTxMzywXVtZtGjIGebQ=
+  TMDB_KEY:
+    secure: 9AnQfOi+/5xH89o1+hy+YLD2LB7+2c8MdhwbZRljbCY8X9B+IInL93StpzxSz8P3
+  TRAKT_KEY:
+    secure: 2fceNF+l2g+W5I5Figk02CmKsTW3KV+dwGPJRKpSJBGpx7eRlrrCBPcXiwfmO/71K1PAmyoRS6yOAoyptM1m6Y272DjO8A4Y9gxZDeIMAL4=
+  TVDB_KEY:
+    secure: azgcw1638UJ80CBj8SNvHJpGCddekdPBWnfKtH2n1m0=
 
 matrix:
   fast_finish: true
