--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "horriblesubs-api": "^1.0.8",
     "inquirer": "^4.0.1",
     "kat-api-pt": "^3.0.0",
-    "mongoose": "^4.13.7",
+    "mongoose": "^4.13.8",
     "node-tvdb": "^3.2.0",
     "nyaa-api-pt": "^2.0.0",
     "omdb-api-pt": "^2.0.1",
     "p-map": "^1.2.0",
     "p-times": "^1.0.1",
     "parse-torrent": "^5.8.3",
-    "pop-api": "^0.5.1",
-    "pop-api-scraper": "git+https://github.com/ChrisAlderson/pop-api-scraper.git",
+    "pop-api": "^0.6.0",
+    "pop-api-scraper": "^0.1.0",
     "rollup": "^0.53.0",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-json": "^2.3.0",
@@ -61,7 +61,12 @@
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "nyc": "^11.4.1",
+    "rollup": "^0.53.0",
+    "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "sinon": "^4.1.3",
     "supertest": "^3.0.0",
     "uglify-es": "^3.3.2"
@@ -77,9 +82,9 @@
     "flow-typed": "flow-typed install",
     "forever": "cross-env NODE_ENV=production forever start ./build/popcorn-api.js",
     "lint": "eslint {src,test}/** ./*.js",
-    "release": "standard-version",
+    "release": "git add ./docs/* && standard-version -a",
     "precommit": "npm run lint && npm run flow",
-    "prerelease": "npm run build",
+    "prerelease": "npm run build && npm run docs",
     "prepush": "npm run test",
     "pretest": "npm run build",
     "providers": "babel-node ./src/index.js --providers",
