--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "horriblesubs-api": "^1.0.8",
     "inquirer": "^4.0.1",
     "kat-api-pt": "^3.0.0",
-    "mongoose": "^4.13.8",
+    "mongoose": "^5.0.0-rc0",
     "node-tvdb": "^3.2.0",
     "nyaa-api-pt": "^2.0.0",
     "omdb-api-pt": "^2.0.1",
     "p-map": "^1.2.0",
     "p-times": "^1.0.1",
     "parse-torrent": "^5.8.3",
-    "pop-api": "^0.6.0",
+    "pop-api": "^0.6.1",
     "pop-api-scraper": "^0.1.0",
     "tmdbapi": "^1.0.2",
     "trakt.tv": "^6.0.2",
@@ -48,14 +48,14 @@
     "eslint-config-vixo": "^2.0.2",
     "express": "^4.16.2",
     "flow": "^0.2.3",
-    "flow-bin": "^0.61.0",
+    "flow-bin": "^0.62.0",
     "flow-typed": "^2.2.3",
     "forever": "^0.15.3",
     "husky": "^0.14.3",
     "mkdirp": "^0.5.1",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
     "nyc": "^11.4.1",
-    "rollup": "^0.53.0",
+    "rollup": "^0.53.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-json": "^2.3.0",
@@ -64,7 +64,7 @@
     "sinon": "^4.1.3",
     "standard-version": "^4.2.0",
     "supertest": "^3.0.0",
-    "uglify-es": "^3.3.2"
+    "uglify-es": "^3.3.3"
   },
   "license": "MIT",
   "scripts": {
